ostree (2017.7-1) UNRELEASED; urgency=medium

  * New upstream release
  * Standards-Version: 4.0.0
    - Use https URL for copyright-format

 -- Simon McVittie <smcv@debian.org>  Wed, 21 Jun 2017 10:07:42 +0100

ostree (2017.6-1) experimental; urgency=medium

  * New upstream release
    - Update debian/copyright
    - Update disabled ostree-boot packaging for new systemd generator
    - Add new ABI to symbols file
  * Skip build-time tests when nocheck is in DEB_BUILD_OPTIONS
    (Closes: #862803). Thanks to Krzesimir Nowak

 -- Simon McVittie <smcv@debian.org>  Thu, 25 May 2017 10:01:12 +0100

ostree (2017.5-1) experimental; urgency=high

  * New upstream release
    - This release fixes a regression in 2017.4 that caused symlinks
      in Flatpak apps and runtimes to be checked out as regular files.
      Any apps or runtimes that were installed or updated with 2017.4
      will need to be removed and reinstalled.

 -- Simon McVittie <smcv@debian.org>  Wed, 19 Apr 2017 14:18:16 +0100

ostree (2017.4-1) experimental; urgency=medium

  * New upstream release
    - d/rules: Explicitly enable trivial-httpd: the tests still need it
    - Update symbols file for new ABI

 -- Simon McVittie <smcv@debian.org>  Mon, 17 Apr 2017 17:19:58 +0100

ostree (2017.3-2) experimental; urgency=medium

  * d/ostree.maintscript: Clean up obsolete conffiles from before we
    started removing what will eventually become ostree-boot
    (see #824650)
  * libostree-dev: Add missing dependency on libostree-1-1
    (Closes: #860047)

 -- Simon McVittie <smcv@debian.org>  Mon, 10 Apr 2017 18:52:26 +0100

ostree (2017.3-1) experimental; urgency=medium

  * d/watch, d/copyright: upstream project is now named libostree
  * New upstream release
    - d/copyright: update
    - symbols file: update
    - tests, ostree-tests.install: update for new location of tests
    - d/control: ostree-tests now needs python-yaml
    - build-depend on python, python-yaml for tests
