@@ -1,0 +1,116 @@
+<?xml version='1.0'?> <!--*-nxml-*-->
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd">
+
+<!--
+Copyright 2011,2013 Colin Walters <walters@verbum.org>
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU Lesser General Public
+License as published by the Free Software Foundation; either
+version 2 of the License, or (at your option) any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Lesser General Public License for more details.
+
+You should have received a copy of the GNU Lesser General Public
+License along with this library; if not, write to the
+Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+Boston, MA 02111-1307, USA.
+-->
+
+<refentry id="ostree">
+
+    <refentryinfo>
+        <title>ostree trivial-httpd</title>
+        <productname>OSTree</productname>
+
+        <authorgroup>
+            <author>
+                <contrib>Developer</contrib>
+                <firstname>Colin</firstname>
+                <surname>Walters</surname>
+                <email>walters@verbum.org</email>
+            </author>
+        </authorgroup>
+    </refentryinfo>
+
+    <refmeta>
+        <refentrytitle>ostree trivial-httpd</refentrytitle>
+        <manvolnum>1</manvolnum>
+    </refmeta>
+
+    <refnamediv>
+        <refname>ostree-trivial-httpd</refname>
+        <refpurpose>Simple webserver</refpurpose>
+    </refnamediv>
+
+    <refsynopsisdiv>
+            <cmdsynopsis>
+                <command>ostree trivial-httpd</command> <arg choice="opt" rep="repeat">OPTIONS</arg> <arg choice="opt">DIR</arg>
+            </cmdsynopsis>
+    </refsynopsisdiv>
+
+<!-- Don't entirely understand this command.  Needs details, better content-->
+    <refsect1>
+        <title>Description</title>
+
+        <para>
+            This runs a simple webserver and keeps it running until killed.  If DIR is not specified, it defaults to the current directory.
+        </para>
+    </refsect1>
+
+    <refsect1>
+        <title>Options</title>
+
+        <variablelist>
+            <varlistentry>
+                <term><option>--daemonize</option>,<option>-d</option></term>
+
+                <listitem><para>
+                    Fork into background when ready.
+                </para></listitem>
+            </varlistentry>
+
+            <varlistentry>
+                <term><option>--autoexit</option></term>
+
+                <listitem><para>
+                    Automatically exit when directory is deleted.
+                </para></listitem>
+            </varlistentry>
+
+            <varlistentry>
+                <term><option>--port-file</option>,<option>-p</option>="PATH"</term>
+
+                <listitem><para>
+                    Write port number to PATH (- for standard output).
+                </para></listitem>
+            </varlistentry>
+
+            <varlistentry>
+                <term><option>--port</option>,<option>-P</option></term>
+
+                <listitem><para>
+                    Use the specified TCP port to listen on.
+                </para></listitem>
+            </varlistentry>
+
+            <varlistentry>
+                <term><option>--force-range-requests</option></term>
+
+                <listitem><para>
+                    Force range requests by only serving half of files.
+                </para></listitem>
+            </varlistentry>
+        </variablelist>
+    </refsect1>
+
+<!-- NEED EXAMPLE OUTPUT HERE!-->
+    <refsect1>
+        <title>Example</title>
+        <para><command>$ ostree trivial-httpd</command></para>
+    </refsect1>
+</refentry>
