@@ -3,6 +3,8 @@ ostree (2017.7-1) UNRELEASED; urgency=medium
   * New upstream release
   * Standards-Version: 4.0.0
     - Use https URL for copyright-format
+  * debian/dist/: Add ostree-trivial-httpd.xml, which was incorrectly
+    excluded from the upstream release
 
  -- Simon McVittie <smcv@debian.org>  Wed, 21 Jun 2017 10:07:42 +0100
 
